--- a/css/user-information.css
+++ b/css/user-information.css
@@ -167,15 +167,8 @@ body {
 
 .body-container {
   display: flex;
-  position: relative;
   padding: 16px 0;
   margin-bottom: 104px;
-}
-
-.big-logo-background {
-  position: absolute;
-  right: 0px;
-  bottom: 0px;
 }
 
 .page-form-container {
@@ -183,7 +176,6 @@ body {
   flex-direction: column;
   width: calc(100vw * 3 / 5);
   margin: 0 auto;
-  position: relative;
 }
 
 .path-container {
@@ -197,27 +189,10 @@ body {
 
 .page-form {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
-  align-items: center;
-}
-
-.page-title {
-  font-size: 32px;
-  font-weight: 600;
-  margin-bottom: 2.5rem;
-  text-align: center;
-  width: 100%;
-}
-
-.page-subtitle {
-  margin-top: 32px;
-  margin-bottom: 32px;
-  font-size: 24px;
-  font-weight: 600;
-  margin-bottom: 2.5rem;
-  text-align: center;
-  width: 100%;
+  align-items: start;
+  gap: 96px;
 }
 
 /* Container cho form */
@@ -232,107 +207,6 @@ body {
   display: flex;
   align-items: center;
   margin-bottom: 0.5rem;
-}
-
-/* Container for the progress bar */
-.steps-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  max-width: 700px;
-  width: 100%;
-  border-radius: 4px;
-  overflow: hidden;
-}
-
-/* Individual steps */
-.step {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 10px 20px;
-  font-size: 16px;
-  color: #1a2d44;
-  background-color: #f2f3f4;
-  position: relative;
-  flex: 1;
-  text-align: center;
-  height: 50px; /* Fixed height */
-}
-
-/* Active step styling */
-.step.active {
-  background-color: #f8af3c;
-  color: #1a2d44;
-}
-
-.step.actived {
-  background-color: #1a2d44;
-  color: white;
-}
-
-/* Arrow for each step except the last one */
-.step:not(:last-child)::after {
-  content: "";
-  position: absolute;
-  right: -25px; /* Adjust arrow position to center it */
-  top: 50%;
-  transform: translateY(-50%);
-  width: 0;
-  height: 0;
-  border-top: 25px solid transparent; /* Height of the arrow */
-  border-bottom: 25px solid transparent;
-  border-left: 25px solid #f2f3f4; /* Background color of arrow */
-  z-index: 2;
-}
-
-/* Arrow color for active steps */
-.step.active:not(:last-child)::after {
-  border-left-color: #f8af3c; /* Arrow color for active step */
-}
-
-.step.actived:not(:last-child)::after {
-  border-left-color: #1a2d44; /* Arrow color for active step */
-}
-
-/* Small triangle to create separation effect */
-.step:not(:first-child)::before {
-  content: "";
-  position: absolute;
-  left: 2px;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 0;
-  height: 0;
-  border-top: 25px solid transparent;
-  border-bottom: 25px solid transparent;
-  border-left: 25px solid white;
-  z-index: 1;
-}
-
-.step img {
-  display: none;
-}
-
-.step.actived img {
-  display: block;
-}
-
-.register-privacy-policy-box {
-  padding: 32px 16px;
-  width: 100%;
-  border: 1px solid lightgray;
-  border-radius: 4px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.information-box {
-  display: flex;
-  flex-direction: column;
-  gap: 32px;
 }
 
 .checkbox-container {
@@ -351,43 +225,6 @@ body {
 
 .checkbox-container label {
   font-size: 14px !important;
-}
-
-.register-button-box {
-  display: flex;
-  flex-direction: row;
-  gap: 16px;
-}
-
-.register-left-button {
-  border: 1px solid #38789a !important;
-  padding: 12px 40px !important;
-  font-size: 14px !important;
-  color: #38789a !important;
-}
-
-.register-right-button {
-  border: 1px solid #fcb900 !important;
-  padding: 12px 40px !important;
-  font-size: 14px !important;
-  color: #fcb900 !important;
-}
-
-.register-email-container {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-}
-
-.register-email-box {
-  display: flex;
-  flex-direction: column;
-  gap: 32px;
-  width: 100%;
-  border: 1px solid lightgray;
-  border-radius: 4px;
-  padding: 56px 72px;
-  font-size: 14px;
 }
 
 .input-group-container {
@@ -421,100 +258,6 @@ body {
 .form-input:focus {
   outline: none;
   border-color: #aaa;
-}
-
-.next-previus-button {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin-top: 36px;
-  width: 100%;
-}
-
-.next-previus-button p {
-  font-size: 14px;
-}
-
-.register-by-company-complete {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 64px;
-}
-
-.register-by-individual-complete {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 64px;
-}
-
-.complete-message {
-  margin-top: 40px;
-  text-align: center;
-  margin-bottom: 32px;
-  font-size: 16px;
-  font-weight: 600;
-}
-
-.complete-button {
-  background-color: #f8af3c !important;
-  padding: 8px 56px !important;
-  font-size: 14px !important;
-}
-
-.individual-register {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  gap: 48px;
-}
-
-.individual-register-information {
-  display: flex;
-  flex-direction: column;
-  border-radius: 4px;
-  background-color: #f5f6f8;
-  width: 100%;
-  padding: 56px 72px;
-  font-size: 14px;
-  gap: 16px;
-}
-
-.twin-input-group {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  gap: 56px;
-}
-
-.twin-input-group .input-group-container {
-  flex: 1 1 auto;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.individual-register-information .form-input {
-  flex: 1;
-}
-
-.individual-register-information
-  input[type="text"].form-input:not(:placeholder-shown) {
-  background-color: #f5f3f0;
-}
-
-.individual-register-information
-  input.form-input:not(:placeholder-shown):focus {
-  background-color: white;
-}
-
-.individual-register-information .input-group-container {
-  align-items: center;
-}
-
-.sub-individual-title {
-  max-width: var(--individual-title-width);
-  flex: 2;
 }
 
 .form-select {
@@ -583,6 +326,147 @@ body {
 
 .input-verify-icon.fa-circle-xmark {
   color: red;
+}
+
+.left-section {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  flex-shrink: 0;
+}
+
+.left-actions {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  font-size: 14px;
+}
+
+.left-actions li {
+  margin-bottom: 4px;
+}
+
+.left-actions span {
+  font-size: 20px;
+}
+
+.left-actions div {
+  font-weight: 300;
+}
+
+.highlight {
+  color: orange;
+  font-weight: bold;
+}
+
+.right-section {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 32px;
+}
+
+.right-section-title {
+  margin-bottom: 32px;
+}
+
+.right-title {
+  font-size: 32px;
+}
+
+.user-information-section {
+  display: flex;
+  flex-direction: column;
+}
+
+.user-information-item {
+  display: flex;
+  flex-direction: row;
+  border-bottom: 1px dashed #ddd;
+  padding: 16px 16px;
+  font-size: 14px;
+}
+
+.user-information-item p:nth-child(1) {
+  flex: 4;
+}
+
+.user-information-item p:nth-child(2) {
+  flex: 6;
+}
+
+.btn-edit-user-information {
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
+}
+
+.course-history {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+.course-attend-status {
+  display: flex;
+  flex-direction: row;
+  gap: 24px;
+  font-size: 14px;
+  align-items: center;
+}
+
+.course-attend-status p {
+  flex: 4;
+}
+
+.course-attend-status select {
+  flex: 6;
+}
+
+.table-container {
+  overflow-x: auto;
+  width: 100%;
+}
+
+/* Styling for the table */
+table {
+  width: 100%;
+  border-collapse: collapse;
+  border-spacing: 0;
+  margin: 0;
+  font-size: 14px;
+  text-align: center;
+  min-width: 1200px !important;
+}
+
+table,
+th,
+td {
+  border: 1px solid lightgray;
+}
+
+/* Styling for table headers */
+th {
+  background-color: #f2f2f2;
+  color: #333;
+  padding: 10px;
+  border-right-width: 1px !important;
+}
+
+/* Styling for table cells */
+td {
+  padding: 10px;
+  border: 1px solid lightgray;
+  border-right-width: 1px !important;
+}
+
+/* Alternating row colors for readability */
+tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+tr:hover {
+  background-color: #f1f1f1; /* Highlight row on hover */
 }
 
 @media (max-width: 1400px) {
@@ -685,55 +569,14 @@ body {
   .body-container {
     margin-bottom: 32px;
   }
+
   .page-form-container {
     width: calc(100vw * 0.7);
     margin: 0 auto;
   }
 
-  .big-logo-background {
-    width: calc(100vw / 2);
-  }
-
   .path-container {
     margin-bottom: 32px;
-  }
-
-  .page-title {
-    margin-bottom: 16px;
-    font-size: 24px;
-  }
-
-  .page-subtitle {
-    margin-bottom: 16px;
-    font-size: 20px;
-  }
-
-  .step {
-    font-size: 12px;
-    height: 40px;
-    padding: 0;
-  }
-
-  .step:not(:first-child) {
-    padding-left: 16px;
-  }
-
-  .step:not(:last-child)::after {
-    right: -12px;
-    border-top: 25px solid transparent; /* Độ cao của mũi tên khớp với chiều cao của .step */
-    border-bottom: 25px solid transparent;
-    border-left: 12px solid #f2f3f4; /* Màu nền của mũi tên */
-  }
-
-  .step:not(:first-child)::before {
-    border-top: 25px solid transparent;
-    border-bottom: 25px solid transparent;
-    border-left: 12px solid white;
-  }
-
-  .step img {
-    width: 14px;
-    height: 14px;
   }
 
   .checkbox-container input[type="checkbox"] {
@@ -745,41 +588,20 @@ body {
     font-size: 12px !important;
   }
 
-  .information-box {
-    width: 100%;
-  }
-
-  .register-button-box {
-    flex-direction: column;
-  }
-
-  .register-button-box button {
-    font-size: 12px !important;
-  }
-
-  .agreement-box {
-    margin: 0 auto;
-  }
-
-  .input-group-container {
-    flex-direction: column;
-  }
-
-  .twin-input-group {
-    gap: 16px;
-  }
-
-  .individual-register-information .input-group-container {
-    align-items: start;
-    gap: 8px;
-  }
-
   .full-width-box {
     width: 100%;
   }
 
   .date-input-container {
     max-width: none;
+  }
+
+  .left-section {
+    display: none;
+  }
+
+  .btn-edit-user-information {
+    display: none;
   }
 }
 
@@ -828,17 +650,22 @@ body {
     width: calc(100vw);
     margin: 0 16px;
   }
-
-  .register-email-box {
-    padding: 16px;
-  }
-
-  .individual-register-information {
-    padding: 24px 32px;
-  }
+  /* End Common */
 
   .input-verify-icon {
     padding: 0 12px;
+  }
+
+  .right-section-title {
+    margin-bottom: 16px;
+  }
+
+  .path-container {
+    margin-bottom: 24px;
+  }
+
+  .user-information-item {
+    gap: 16px;
   }
 }
 
@@ -849,8 +676,19 @@ body {
 
   /* End NAV AND FOOTER */
 
-  .individual-register {
-    width: auto;
-    margin: 0 -16px;
+  .user-information-item p:nth-child(1) {
+    flex: 5;
+  }
+
+  .user-information-item p:nth-child(2) {
+    flex: 5;
+  }
+
+  .course-attend-status p {
+    flex: 3;
+  }
+
+  .course-attend-status select {
+    flex: 7;
   }
 }
